project(Alpha_complex_tests)

include(GUDHI_boost_test)
if(CGAL_FOUND AND EIGEN3_FOUND)

  # Do not forget to copy test files in current binary dir
  file(COPY "${CMAKE_SOURCE_DIR}/data/points/alphacomplexdoc.off" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)

  add_executable ( Alpha_complex_test_unit Alpha_complex_unit_test.cpp )
  target_link_libraries(Alpha_complex_test_unit CGAL::CGAL)
  add_executable ( Alpha_complex_dim3_test_unit Alpha_complex_dim3_unit_test.cpp )
  target_link_libraries(Alpha_complex_dim3_test_unit CGAL::CGAL)
  add_executable ( Delaunay_complex_Epeck_dynamic_test_unit Delaunay_complex_Epeck_dynamic_unit_test.cpp )
  target_link_libraries(Delaunay_complex_Epeck_dynamic_test_unit CGAL::CGAL)
  add_executable ( Delaunay_complex_Epeck_static_test_unit Delaunay_complex_Epeck_static_unit_test.cpp )
  target_link_libraries(Delaunay_complex_Epeck_static_test_unit CGAL::CGAL)
  add_executable ( Delaunay_complex_Epick_dynamic_test_unit Delaunay_complex_Epick_dynamic_unit_test.cpp )
  target_link_libraries(Delaunay_complex_Epick_dynamic_test_unit CGAL::CGAL)
  add_executable ( Delaunay_complex_Epick_static_test_unit Delaunay_complex_Epick_static_unit_test.cpp )
  target_link_libraries(Delaunay_complex_Epick_static_test_unit CGAL::CGAL)
  if(TARGET TBB::tbb)
    target_link_libraries(Alpha_complex_test_unit TBB::tbb)
    target_link_libraries(Alpha_complex_dim3_test_unit TBB::tbb)
    target_link_libraries(Delaunay_complex_Epeck_dynamic_test_unit TBB::tbb)
    target_link_libraries(Delaunay_complex_Epeck_static_test_unit TBB::tbb)
    target_link_libraries(Delaunay_complex_Epick_dynamic_test_unit TBB::tbb)
    target_link_libraries(Delaunay_complex_Epick_static_test_unit TBB::tbb)
  endif()

  gudhi_add_boost_test(Alpha_complex_test_unit)
  gudhi_add_boost_test(Alpha_complex_dim3_test_unit)
  gudhi_add_boost_test(Delaunay_complex_Epeck_dynamic_test_unit)
  gudhi_add_boost_test(Delaunay_complex_Epeck_static_test_unit)
  gudhi_add_boost_test(Delaunay_complex_Epick_dynamic_test_unit)
  gudhi_add_boost_test(Delaunay_complex_Epick_static_test_unit)

endif(CGAL_FOUND AND EIGEN3_FOUND)

if(CGAL_FOUND)

  add_executable ( Alpha_complex_3d_test_unit Alpha_complex_3d_unit_test.cpp )
  target_link_libraries(Alpha_complex_3d_test_unit CGAL::CGAL)
  add_executable ( Weighted_alpha_complex_3d_test_unit Weighted_alpha_complex_3d_unit_test.cpp )
  target_link_libraries(Weighted_alpha_complex_3d_test_unit CGAL::CGAL)
  add_executable ( Periodic_alpha_complex_3d_test_unit Periodic_alpha_complex_3d_unit_test.cpp )
  target_link_libraries(Periodic_alpha_complex_3d_test_unit CGAL::CGAL)
  add_executable ( Weighted_periodic_alpha_complex_3d_test_unit Weighted_periodic_alpha_complex_3d_unit_test.cpp )
  target_link_libraries(Weighted_periodic_alpha_complex_3d_test_unit CGAL::CGAL)
  if(TARGET TBB::tbb)
    target_link_libraries(Alpha_complex_3d_test_unit TBB::tbb)
    target_link_libraries(Weighted_alpha_complex_3d_test_unit TBB::tbb)
    target_link_libraries(Periodic_alpha_complex_3d_test_unit TBB::tbb)
    target_link_libraries(Weighted_periodic_alpha_complex_3d_test_unit TBB::tbb)
  endif()

  gudhi_add_boost_test(Alpha_complex_3d_test_unit)
  gudhi_add_boost_test(Weighted_alpha_complex_3d_test_unit)
  gudhi_add_boost_test(Periodic_alpha_complex_3d_test_unit)
  gudhi_add_boost_test(Weighted_periodic_alpha_complex_3d_test_unit)

endif(CGAL_FOUND)

# Weighted version of dD Alpha complex requires CGAL >= 5.1.0
if(CGAL_FOUND AND EIGEN3_FOUND AND NOT CGAL_VERSION VERSION_LESS 5.1.0)
  add_executable ( Alpha_kernel_d_Epeck_dynamic_test_unit Alpha_kernel_d_Epeck_dynamic_unit_test.cpp )
  add_executable ( Alpha_kernel_d_Epeck_static_test_unit Alpha_kernel_d_Epeck_static_unit_test.cpp )
  add_executable ( Alpha_kernel_d_Epick_dynamic_test_unit Alpha_kernel_d_Epick_dynamic_unit_test.cpp )
  add_executable ( Alpha_kernel_d_Epick_static_test_unit Alpha_kernel_d_Epick_static_unit_test.cpp )
  target_link_libraries(Alpha_kernel_d_Epeck_dynamic_test_unit CGAL::CGAL)
  target_link_libraries(Alpha_kernel_d_Epeck_static_test_unit CGAL::CGAL)
  target_link_libraries(Alpha_kernel_d_Epick_dynamic_test_unit CGAL::CGAL)
  target_link_libraries(Alpha_kernel_d_Epick_static_test_unit CGAL::CGAL)
  if(TARGET TBB::tbb)
    target_link_libraries(Alpha_kernel_d_Epeck_dynamic_test_unit TBB::tbb)
    target_link_libraries(Alpha_kernel_d_Epeck_static_test_unit TBB::tbb)
    target_link_libraries(Alpha_kernel_d_Epick_dynamic_test_unit TBB::tbb)
    target_link_libraries(Alpha_kernel_d_Epick_static_test_unit TBB::tbb)
  endif()
  gudhi_add_boost_test(Alpha_kernel_d_Epeck_dynamic_test_unit)
  gudhi_add_boost_test(Alpha_kernel_d_Epeck_static_test_unit)
  gudhi_add_boost_test(Alpha_kernel_d_Epick_dynamic_test_unit)
  gudhi_add_boost_test(Alpha_kernel_d_Epick_static_test_unit)
  
  add_executable ( Weighted_alpha_complex_test_unit Weighted_alpha_complex_unit_test.cpp )
  target_link_libraries(Weighted_alpha_complex_test_unit CGAL::CGAL)
  if(TARGET TBB::tbb)
    target_link_libraries(Weighted_alpha_complex_test_unit TBB::tbb)
  endif()
  gudhi_add_boost_test(Weighted_alpha_complex_test_unit)

  add_executable ( Weighted_alpha_complex_non_visible_points_test_unit Weighted_alpha_complex_non_visible_points_unit_test.cpp )
  target_link_libraries(Weighted_alpha_complex_non_visible_points_test_unit CGAL::CGAL)
  if(TARGET TBB::tbb)
    target_link_libraries(Weighted_alpha_complex_non_visible_points_test_unit TBB::tbb)
  endif()
  gudhi_add_boost_test(Weighted_alpha_complex_non_visible_points_test_unit)

  add_executable ( Zero_weighted_alpha_complex_dynamic_test_unit Zero_weighted_alpha_complex_dynamic_unit_test.cpp )
  target_link_libraries(Zero_weighted_alpha_complex_dynamic_test_unit CGAL::CGAL)
  add_executable ( Zero_weighted_alpha_complex_static_test_unit Zero_weighted_alpha_complex_static_unit_test.cpp )
  target_link_libraries(Zero_weighted_alpha_complex_static_test_unit CGAL::CGAL)
  if(TARGET TBB::tbb)
    target_link_libraries(Zero_weighted_alpha_complex_dynamic_test_unit TBB::tbb)
    target_link_libraries(Zero_weighted_alpha_complex_static_test_unit TBB::tbb)
  endif()
  gudhi_add_boost_test(Zero_weighted_alpha_complex_dynamic_test_unit)
  gudhi_add_boost_test(Zero_weighted_alpha_complex_static_test_unit)

endif(CGAL_FOUND AND EIGEN3_FOUND AND NOT CGAL_VERSION VERSION_LESS 5.1.0)
